# fitsbolt

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: release_process.md
.github/workflows/: deploy_to_test_pypi.yml  run_tests.yml
astro_loader/: __init__.py  image_loader.py
astro_loader/cfg/: create_config.py
astro_loader/normalisation/: normalisation.py
examples/: multi_extension_tutorial.ipynb
fitsbolt/: __init__.py  channel_mixing.py  image_loader.py  read.py  resize.py
fitsbolt/cfg/: __init__.py  create_config.py  logger.py
fitsbolt/normalisation/: NormalisationMethod.py  __init__.py  normalisation.py
tests/: test_channel_mixing.py  test_config_validation.py  test_io.py  test_multi_fits.py  test_normalisation.py  test_read_functions.py  test_wrapper_functions.py
